<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary"
    tools:context=".BMIActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/weight_in_kg"
        app:boxStrokeColor="@color/basilgreen"
        app:hintTextColor="@color/basilgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:fontFamily="@font/rubik"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/basilgreen" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/height_in_cm"
        app:boxStrokeColor="@color/basilgreen"
        app:hintTextColor="@color/basilgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:fontFamily="@font/rubik"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/basilgreen" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/age_in_years"
        app:boxStrokeColor="@color/basilgreen"
        app:hintTextColor="@color/basilgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:fontFamily="@font/rubik"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/basilgreen" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:buttonTint="?colorPrimaryVariant"
            android:text="@string/radio_female" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="?colorPrimaryVariant"
            android:text="@string/radio_male" />
    </RadioGroup>

    <TextView
        android:id="@+id/edit_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik"
        android:lineSpacingExtra="10sp"
        android:text="@string/how_active"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/basilgreen"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroupActivity"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_sedentary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:buttonTint="?colorPrimaryVariant"
                android:text="@string/radio_sedentary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_light_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:buttonTint="?colorPrimaryVariant"
                android:text="@string/radio_light_active"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radio_sedentary"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_moderate_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:buttonTint="?colorPrimaryVariant"
                android:text="@string/radio_moderate_active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_sedentary" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_very_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:buttonTint="?colorPrimaryVariant"
                android:text="@string/radio_very_active"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radio_moderate_active"
                app:layout_constraintTop_toBottomOf="@+id/radio_light_active" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>

    <Button
        android:id="@+id/calculate_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="300dp"
        android:height="50dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:fontFamily="@font/rubik"
        android:text="@string/calculate"
        android:textColor="@color/beige"
        android:textSize="18sp"
        android:textStyle="bold"
        app:iconPadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>