<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary"
    tools:context=".services.login.LoginActivity">

    <Button
        android:id="@+id/loginBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="?colorPrimaryVariant"
        android:fontFamily="@font/rubik"
        android:onClick="logIn"
        android:paddingVertical="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameField"
        android:layout_width="310dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/username_hint"
        app:boxStrokeColor="@color/basilgreen"
        app:hintTextColor="@color/basilgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:textColorHint="?colorPrimaryVariant" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:boxStrokeColor="@color/basilgreen"
        app:hintTextColor="@color/basilgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameField"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/beige"
            android:fontFamily="@font/rubik"
            android:password="true"
            android:textColor="@color/black"
            android:textColorHint="?colorPrimaryVariant" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/rubik"
        android:text="@string/login"
        android:textColor="?colorPrimaryVariant"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="@string/dont_have_account"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:onClick="gotoRegister"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="?colorPrimaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginBottom="235dp"
        android:paddingVertical="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:shadowRadius="50"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:backgroundTint="@color/grey_bg_light"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconGravity="textStart"
        app:iconSize="19dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nametextnull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:text="@string/username_null"
        android:textColor="@color/red_active"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <TextView
        android:id="@+id/passwordTextnull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/rubik"
        android:text="@string/password_null"
        android:textAlignment="center"
        android:textColor="@color/red_active"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />


</androidx.constraintlayout.widget.ConstraintLayout>